infra/k8s-prod/common/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "alb" 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:848184835076:certificate/2dd6133e-21fb-4fbf-8aa6-79f306cea7f9 
spec:
  ingressClassName: alb
  rules:
    - host: app.lendinfra.devworkops.xyz 
      http:
        paths:
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: decision-loop-server-srv
                port:
                  number: 3000
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: decision-loop-client-srv
                port:
                  number: 3000
